# sticks-and-stones

./: CMakeLists.txt  amc.cpp  amc.hpp  asf.cpp  asf.hpp  main.cpp  render_output.cpp  render_output.hpp  window.cpp  window.hpp
assets/: bone_frag.glsl  bone_vert.glsl  cone_vert.glsl  limit_frag.glsl  limit_geom.glsl  limit_vert.glsl
